<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6BFFFFFF"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_background_register"
            android:layout_marginStart="10sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="20dp"

            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="REGISTRATION"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10sp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <View
                    android:layout_width="130dp"
                    android:layout_height="4dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/background" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Full Name"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/edittext"
                    android:drawablePadding="10dp"
                    android:hint="Enter Your Fullname"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:textColorHint="#ffff"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/edittext"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="Enter Your Email"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:textColorHint="#ffff"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/edittext"
                    android:drawablePadding="10dp"
                    android:hint="Enter Your Password"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="#ffff"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Address"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="1dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/edittext"
                    android:drawablePadding="10dp"
                    android:hint="Enter Your Address"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="#ffff"
                    android:textSize="12sp" />



                <ImageButton
                    android:id="@+id/icg_back"
                    android:layout_width="62dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/button_background"
                    android:src="@drawable/ic_arrow_forward_black_24dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Click here to login."
                    android:textAlignment="center"
                    android:textSize="13sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_background"
                    android:text="Sign In"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>